[package]
name = "iced"
version = "0.6.0"
authors = ["Héctor Ramón Jiménez <hector0193@gmail.com>"]
edition = "2021"
description = "A cross-platform GUI library inspired by Elm"
license = "MIT"
repository = "https://github.com/iced-rs/iced"
documentation = "https://docs.rs/iced"
readme = "README.md"
keywords = ["gui", "ui", "graphics", "interface", "widgets"]
categories = ["gui"]

[features]
default = ["softbuffer", "winit"]
# Enables the `Image` widget
image = ["iced_wgpu?/image", "iced_glow?/image", "iced_softbuffer?/image", "image_rs"]
# Enables the `Svg` widget
svg = ["iced_wgpu?/svg", "iced_glow?/svg", "iced_softbuffer?/svg"]
# Enables the `Canvas` widget
canvas = ["iced_graphics/canvas"]
# Enables the `QRCode` widget
qr_code = ["iced_graphics/qr_code"]
# Enables the `iced_wgpu` renderer. Conflicts with `iced_glow` and `iced_softbuffer`
wgpu = ["iced_wgpu"]
# Enables the `iced_softbuffer` renderer. Conflicts with `iced_wgpu` and `iced_glow`
softbuffer = ["iced_softbuffer"]
# Enables the `iced_glow` renderer. Conflicts with `iced_wgpu` and `iced_softbuffer`
glow = ["iced_glow"]
# Enables using system fonts
default_system_font = ["iced_wgpu?/default_system_font", "iced_glow?/default_system_font"]
# Enables a debug view in native platforms (press F12)
debug = ["iced_winit?/debug"]
# Enables `tokio` as the `executor::Default` on native platforms
tokio = ["iced_futures/tokio"]
# Enables `async-std` as the `executor::Default` on native platforms
async-std = ["iced_futures/async-std"]
# Enables `smol` as the `executor::Default` on native platforms
smol = ["iced_futures/smol"]
# Enables advanced color conversion via `palette`
palette = ["iced_core/palette"]
# Enables querying system information
system = ["iced_winit?/system"]
# Enables the glutin shell. Conflicts with `sctk` and `winit`.
# Forces the `glow` renderer, further conflicting with `wgpu` and `softbuffer`.
glutin = ["iced_glutin", "iced_glow"]
# Enables the wayland shell. Conflicts with `winit` and `glutin`.
# Incompatible with the `softbuffer` and `wgpu` renderer.
wayland = ["iced_sctk"]
# Enables the winit shell. Conflicts with `wayland` and `glutin`.
winit = ["iced_winit"]

[badges]
maintenance = { status = "actively-developed" }

[workspace]
members = [
    "core",
    "futures",
    "graphics",
    "glow",
    "glutin",
    "lazy",
    "native",
    "softbuffer",
    "style",
    "wgpu",
    "winit",
    "sctk",
    "examples/*",
]

[dependencies]
iced_core = { version = "0.6", path = "core" }
iced_futures = { version = "0.5", path = "futures" }
iced_native = { version = "0.7", path = "native" }
iced_graphics = { version = "0.5", path = "graphics" }
iced_winit = { version = "0.6", path = "winit", features = ["application"], optional = true }
iced_glutin = { version = "0.5", path = "glutin", optional = true }
iced_glow = { version = "0.5", path = "glow", optional = true }
iced_sctk = { path = "./sctk", optional = true }
iced_softbuffer = { version = "0.1", path = "softbuffer", optional = true }
thiserror = "1.0"

[dependencies.image_rs]
version = "0.24"
package = "image"
optional = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
iced_wgpu = { version = "0.7", path = "wgpu", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
iced_wgpu = { version = "0.7", path = "wgpu", features = ["webgl"], optional = true }

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
features = ["image", "svg", "canvas", "qr_code"]

[profile.release-opt]
inherits = "release"
codegen-units = 1
debug = false
lto = true
incremental = false
opt-level = 3
overflow-checks = false
strip = "debuginfo"

[patch."https://github.com/iced-rs/winit.git".winit]
git = "https://github.com/pop-os/winit.git"
branch = "iced"