[package]
name = "iced_accessibility"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# TODO Ashley re-export more platform adapters

[dependencies]
accesskit = { git = "https://github.com/wash2/accesskit.git", tag = "v0.11.0", version = "0.11.0" }
enumset = { version = "1.0" }
accesskit_unix = { git = "https://github.com/wash2/accesskit.git", tag = "v0.11.0", version = "0.4.0", optional = true }
accesskit_windows = { git = "https://github.com/wash2/accesskit.git", tag = "v0.11.0", version = "0.14.0", optional = true}
accesskit_macos = { git = "https://github.com/wash2/accesskit.git", tag = "v0.11.0", version = "0.7.0", optional = true}
accesskit_winit = { git = "https://github.com/wash2/accesskit.git", tag = "v0.11.0", version = "0.13.0", optional = true}

[dependencies.iced_core]
version = "0.6"
path = "../core"
features = ["a11y"]
