[package]
name = "iced_native"
version = "0.7.0"
authors = ["Héctor Ramón Jiménez <hector0193@gmail.com>"]
edition = "2021"
description = "A renderer-agnostic library for native GUIs"
license = "MIT"
repository = "https://github.com/iced-rs/iced"

[features]
default = []
wayland = ["sctk"]
debug = []
a11y = ["iced_accessibility", "enumset", "iced_core/a11y"]

[dependencies]
itertools = "0.10.5"
twox-hash = { version = "1.5", default-features = false }
unicode-segmentation = "1.6"
num-traits = "0.2"
sctk = { package = "smithay-client-toolkit", git = "https://github.com/smithay/client-toolkit", rev = "389a4f2", optional = true }
accesskit = { version = "0.8.1", optional = true }
enumset = { version = "1.0", optional = true }

[dependencies.iced_core]
version = "0.6"
path = "../core"

[dependencies.iced_futures]
version = "0.5"
path = "../futures"
features = ["thread-pool"]

[dependencies.iced_style]
version = "0.5.1"
path = "../style"

[dependencies.iced_accessibility]
version = "0.1.0"
path = "../accessibility"
optional = true
