[package]
name = "iced_runtime"
description = "A renderer-agnostic runtime for iced"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true

[lints]
workspace = true

[features]
debug = []
selector = ["dep:iced_selector"]
a11y = ["iced_accessibility", "iced_core/a11y"]
wayland = ["iced_core/wayland", "dep:cctk"]

[dependencies]
bytes.workspace = true
iced_core.workspace = true
iced_futures.workspace = true

raw-window-handle.workspace = true
thiserror.workspace = true

sipper.workspace = true
sipper.optional = true

iced_selector.workspace = true
iced_selector.optional = true
iced_futures.features = ["thread-pool"]
iced_accessibility.workspace = true
iced_accessibility.optional = true
window_clipboard.workspace = true
dnd.workspace = true

[target.'cfg(all(unix, not(any(target_os = "redox", target_family = "wasm", target_os = "android", target_vendor = "apple"))))'.dependencies]
cctk.workspace = true
cctk.optional = true

[build-dependencies]
build_helpers = { path = "../build_helpers" }
