[package]
name = "iced_softbuffer"
version = "0.1.0"
authors = ["Jeremy Soller <jackpot51@gmail.com>"]
edition = "2021"
description = "A softbuffer renderer for Iced"
license = "MIT AND OFL-1.1"
repository = "https://github.com/iced-rs/iced"

[dependencies]
cosmic-text = { git = "https://github.com/pop-os/cosmic-text.git" }
lazy_static = "1.4"
log = "0.4"
raw-window-handle = "0.5"
raqote = "0.8"
# Patched version for raw-window-handle 0.5 and Redox support
softbuffer = { git = "https://github.com/jackpot51/softbuffer", branch = "redox-0.1.1" }

[dependencies.iced_native]
version = "0.6"
path = "../native"

[dependencies.iced_graphics]
version = "0.4"
path = "../graphics"
features = ["font-fallback", "font-icons"]

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
all-features = true
