[package]
name = "iced_winit"
description = "A runtime for iced on top of winit"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true

[lints]
workspace = true

[features]
default = ["x11", "wayland", "wayland-dlopen"]
debug = ["iced_debug/enable"]
sysinfo = ["dep:sysinfo"]
unconditional-rendering = []
linux-theme-detection = ["dep:mundy", "mundy/async-io", "mundy/color-scheme"]
x11 = ["winit/x11"]
system = ["sysinfo"]
program = []
wayland = [
    "winit/wayland",
    "sctk",
    "wayland-protocols",
    "raw-window-handle",
    "iced_runtime/wayland",
    "wayland-backend",
    "xkbcommon",
    "xkbcommon-dl",
    "xkeysym",
    "wayland-csd-adwaita",
]
wayland-dlopen = ["winit/wayland-dlopen"]
wayland-csd-adwaita = ["winit/wayland-csd-adwaita"]
multi-window = ["iced_runtime/multi-window"]
a11y = ["iced_accessibility", "iced_runtime/a11y"]


[dependencies]
iced_futures.workspace = true
iced_graphics.workspace = true
iced_runtime.workspace = true
iced_accessibility.workspace = true
iced_accessibility.optional = true
iced_accessibility.features = ["accesskit_winit"]
log.workspace = true
rustc-hash.workspace = true
thiserror.workspace = true
tracing.workspace = true
window_clipboard.workspace = true
dnd.workspace = true
winit.workspace = true
winit-core.workspace = true
cursor-icon.workspace = true

sysinfo.workspace = true
sysinfo.optional = true

iced_debug.workspace = true
iced_program.workspace = true


[target.'cfg(target_os = "linux")'.dependencies]
mundy.workspace = true
mundy.optional = true

raw-window-handle = { version = "0.6", optional = true }
sctk.workspace = true
sctk.optional = true
wayland-protocols.workspace = true
wayland-protocols.optional = true
wayland-backend = { version = "0.3.1", features = [
    "client_system",
], optional = true }
xkbcommon = { version = "0.7", features = ["wayland"], optional = true }
xkbcommon-dl = { version = "0.4.1", optional = true }
xkeysym = { version = "0.2.0", optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
winapi.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys.workspace = true
web-sys.features = ["Document", "Window", "HtmlCanvasElement"]
wasm-bindgen-futures.workspace = true
