[package]
name = "clock_sctk_window"
version = "0.1.0"
authors = ["Ashley Wulber <ashley@system76.com>"]
edition = "2021"
publish = false

[dependencies]
iced = { path = "../..", default-features = false, features = ["canvas", "tokio", "debug", "wayland"] }
time = { version = "0.3.5", features = ["local-offset"] }
iced_native = { path = "../../native" }
sctk = { package = "smithay-client-toolkit", git = "https://github.com/Smithay/client-toolkit" }
iced_sctk = { git = "https://github.com/pop-os/iced-sctk" }
# iced_sctk = { path = "../../../fork/iced-sctk" }
