[package]
name = "sctk-drag"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { path = "../..", default-features = false,  features = ["wayland", "debug", "image", "dyrend"] }
env_logger = "0.10"
